[package]
name = "nano-banana-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for interacting with Google Gemini Nano Banana Pro"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
